# emojfuscate

./: .gitignore  Cargo.toml  README.md  emoji
.github/workflows/: rust.yml
emojfuscate_derive/: Cargo.toml  README.md
emojfuscate_derive/src/: lib.rs
emojfuscate_proc_macro/: Cargo.toml
emojfuscate_proc_macro/src/: lib.rs
src/: main.rs
src/cli/: constants.rs  main.rs
src/emojfuscate/: constants.rs  demojfuscate.rs  emojfuscate.rs  from_emoji_stream.rs  hex_stream.rs  mod.rs  to_emoji_stream.rs
src/emojfuscate/util/: iterator_wrapper.rs
tests/: tests.rs
