[package]
name = "emojfuscate"
version = "0.1.0"
edition = "2021"

[lib]
name = "emojfuscate"
path = "src/emojfuscate/mod.rs"

[dev-dependencies]
proptest = "1.0.0"

[[bin]]
name = "emojfuscate-cli"
path = "src/cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
uuid = "1.8.0"
quote = "1.0.36"
syn = "2.0.71"
emojfuscate_proc_macro = { path = "emojfuscate_proc_macro" }
paste = "1.0.15"
lazy_static = "1.5.0"
