[package]
name = "emojfuscate"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
description = "Tools for turning any data into emoji and back again"
readme = "README.md"
homepage = "https://github.com/AxelUlmestig/emojfuscate"
repository = "https://github.com/AxelUlmestig/emojfuscate"
keywords = ["emoji", "serialization", "stream", "lazy", "data"]
categories = ["encoding"]

[lib]
name = "emojfuscate"
path = "src/emojfuscate/mod.rs"

[dev-dependencies]
proptest = "1.0.0"

[[bin]]
name = "emojfuscate"
path = "src/cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
uuid = "1.8.0"
quote = "1.0.36"
syn = "2.0.71"
paste = "1.0.15"
lazy_static = "1.5.0"

# emojfuscate_derive = { path = "emojfuscate_derive" }
emojfuscate_derive = "0.1.0"
