[package]
name = "emojfuscate_derive"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "derive macros for emojfuscate"
readme = "README.md"
homepage = "https://github.com/AxelUlmestig/emojfuscate"
repository = "https://github.com/AxelUlmestig/emojfuscate"
keywords = ["emojfuscate", "derive", "proc_macro"]
categories = ["encoding", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.71"
